# oneMini-cli

./: .env.example  .gitignore  Cargo.toml  ONEMINI.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: AppIcon.icns  README.md
docs/: OVERVIEW.md
release/: README.md  managed.toml.example  permissions.toml.example  signing_public_key.b64  versions.json  versions.json.sig
scripts/: check-embedded-pubkey.sh  embedded_pubkey.b64  generate-brand-icons.sh  generate-readme-images.sh  install-local.bat  install-local.ps1  install-local.sh  install.cmd  install.ps1  install.sh  sign-release.sh  sync-embedded-pubkey.sh  verify_signature.py
scripts/lib/: windows-path.ps1
skills/: README.md  requirements-docs.txt
skills/blender-modeling/: SKILL.md
skills/character-brief/: SKILL.md
skills/code-review/: SKILL.md
skills/commit-message/: SKILL.md
skills/debug/: SKILL.md
skills/docx/: SKILL.md
skills/docx/scripts/: accept_changes.py
skills/explore-codebase/: SKILL.md
skills/pdf/: SKILL.md  forms.md  reference.md
skills/pdf/scripts/: convert_pdf_to_images.py  extract_form_field_info.py  extract_tables.py  extract_text.py  fill_fillable_fields.py  merge_pdfs.py  split_pdf.py
skills/pptx/: SKILL.md  editing.md  pptxgenjs.md
skills/pptx/scripts/: add_slide.py  clean.py  thumbnail.py
skills/prompt-polish/: SKILL.md
skills/readme/: SKILL.md
skills/refactor/: SKILL.md
skills/shared/office/: pack.py  soffice.py  unpack.py  validate.py
skills/shared/office/helpers/: merge_runs.py  simplify_redlines.py
skills/shared/office/validators/: base.py  docx.py  pptx.py
skills/shot-list/: SKILL.md
skills/storyboard/: SKILL.md
skills/visual-style/: SKILL.md
skills/xlsx/: SKILL.md
skills/xlsx/scripts/: recalc.py
src/: cli.rs  compress.rs  config.rs  fs_util.rs  git.rs  hooks.rs  main.rs  managed.rs  mcp.rs  permissions.rs  repl.rs  session.rs  session_crypto.rs  slash.rs  subagent.rs  ui.rs  update.rs  usage.rs  worktree.rs
src/agent/: mod.rs  prompt.rs  task.rs
src/install/: mod.rs
src/llm/: mod.rs  openai.rs  types.rs
src/permissions/: auto.rs  circuit_breaker.rs  manager.rs  mod.rs  mode.rs  patterns.rs  rules.rs
src/sandbox/: mod.rs
src/skills/: bootstrap.rs  builtin.rs  catalog.rs  install.rs  match.rs  mod.rs
src/tools/: bash.rs  delegate.rs  edit.rs  fetch.rs  glob_tool.rs  grep.rs  list_skills.rs  mod.rs  read.rs  write.rs
src/ui/: banner.rs  markdown.rs  palette.rs  panel.rs  plan.rs  repl_helper.rs  sanitize.rs  spinner.rs  stream.rs  table.rs  terminal.rs  theme.rs  usage_bar.rs
src/update/: index.rs  mod.rs  security.rs
tools/generate-icons/: main.rs
tools/sign-blob/: main.rs
