[package]
name = "onemini-cli"
version = "0.1.3"
edition = "2021"
description = "OneMini 系产品 CLI — 类似 Claude Code 的终端 AI 编程助手"
license = "Apache-2.0"
readme = "README.md"
default-run = "onemini"

[[bin]]
name = "onemini"
path = "src/main.rs"

[[bin]]
name = "onemini-sign"
path = "tools/sign-blob/main.rs"

[[bin]]
name = "generate-icons"
path = "tools/generate-icons/main.rs"

[build-dependencies]
winres = "0.1"

[features]
default = ["keychain"]
keychain = ["dep:keyring"]

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dependencies]
anyhow = "1"
aes-gcm = "0.10"
getrandom = "0.2"
hostname = "0.4"
whoami = "1"
keyring = { version = "3", optional = true, features = ["apple-native", "linux-native", "windows-native"] }
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
dialoguer = "0.11"
dirs = "5"
futures = "0.3"
glob = "0.3"
pulldown-cmark = "0.13"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustyline = { version = "14", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
base64 = "0.22.1"
sha2 = "0.11.0"
ed25519-dalek = { version = "2.2.0", features = ["std", "rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
image = "0.25"
ico = "0.3"
